update docs/linux.md, add openssl self-signed SSL cert generation and install chinese input method  on ubuntu 18.04

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
 build
 build/*
 .vscode
-lib/openssl/openssl_static_3.1.5
-lib/openssl/openssl_static_3.1.5/*
-lib/openssl/openssl_static_3.0.0
-lib/openssl/openssl_static_3.0.0/*
-lib/openssl/openssl_static_3.0.13
-lib/openssl/openssl_static_3.0.13/*
-lib/openssl/openssl_share_3.1.5
-lib/openssl/openssl_share_3.1.5/*
+lib/openssl/openssl_static_3.1.5/
+lib/openssl/openssl_static_3.0.0/
+lib/openssl/openssl_static_3.0.13/
+lib/openssl/openssl_share_3.1.5/
 lib/openssl/openssl_share_3.0.0
-lib/openssl/openssl_share_3.0.0/*
-lib/openssl/openssl_share_3.0.13
-lib/openssl/openssl_share_3.0.13/*
+lib/openssl/openssl_share_3.0.13/
+lib/openssl/
