update json parser from jsoncpp to nlohmann/json

--- a/meson.build
+++ b/meson.build
@@ -142,8 +142,7 @@ sources = [
     'src/FileUtils.cpp',
     'src/ConsoleTable.cpp',
     'src/Base64.cpp',
-    'src/Global.cpp',
-    'lib/jsoncpp.cpp']
+    'src/Global.cpp']
 
 executable('dragon', 
             sources,
