1. add server port and HTTP Basic authentication configuration support
2. add /request api

--- a/src/config/dragon.ini
+++ b/src/config/dragon.ini
@@ -1,2 +1,12 @@
+; CORS跨域请求头设置
 [Access-Control-Allow-Headers]
 Headers=Origin, Content-Type, X-Auth-Token, X-XSRF-TOKEN
+
+; 认证信息
+[Authentication]
+username=root
+password=0penBmc
+
+; 服务器监听信息
+[Server]
+port=9999
