--- a/meson.build
+++ b/meson.build
@@ -1,15 +1,18 @@
-project('dragon https server', 'cpp',
-         version:'1.0.0',
-         license: 'MIT',
-         default_options: [
-            'cpp_std=c++11',
-            'buildtype=release',
-            'b_ndebug=if-release',
-            'b_lto=true',
-            'warning_level=3',
-            'default_library=static'
-         ],
-         meson_version: '>=0.47.0')
+project(
+  'dragon https server',
+  'cpp',
+  version: '1.0.0',
+  license: 'MIT',
+  default_options: [
+    'cpp_std=c++11',
+    'buildtype=release',
+    'b_ndebug=if-release',
+    'b_lto=true',
+    'warning_level=3',
+    'default_library=static',
+  ],
+  meson_version: '>=0.47.0',
+)
 
 # cpp_args ='-Werror'
 
@@ -23,26 +26,45 @@ includes = include_directories('lib/openssl/openssl_share_3.0.0/include')
 
 # openssl_dep = dependency('openssl', version: '>=3.0.0', required: get_option('cpp-httplib_openssl'))
 # 自定义openssl版本共享库路径
-openssl_dep = meson.get_compiler('cpp').find_library(
-        'ssl',
-        dirs : join_paths(meson.source_root(),'lib/openssl/openssl_share_3.0.0/lib'),
-        required:get_option('cpp-httplib_openssl')
-    )
-crypto_dep =  meson.get_compiler('cpp').find_library(
-        'crypto',
-        dirs : join_paths(meson.source_root(),'lib/openssl/openssl_share_3.0.0/lib'),
-        required:get_option('cpp-httplib_openssl')
-    )
+os_name = host_machine.system().to_lower()
+if os_name == 'darwin'
+  openssl_dep = meson.get_compiler('cpp').find_library(
+    'ssl',
+    dirs: join_paths('/opt/homebrew/Cellar/openssl@3/3.5.0/lib'),
+    required: get_option('cpp-httplib_openssl'),
+  )
+  crypto_dep = meson.get_compiler('cpp').find_library(
+    'crypto',
+    dirs: join_paths('/opt/homebrew/Cellar/openssl@3/3.5.0/lib'),
+    required: get_option('cpp-httplib_openssl'),
+  )
+else
+  openssl_dep = meson.get_compiler('cpp').find_library(
+    'ssl',
+    dirs: join_paths(meson.source_root(), 'lib/openssl/openssl_share_3.0.0/lib'),
+    required: get_option('cpp-httplib_openssl'),
+  )
+  crypto_dep = meson.get_compiler('cpp').find_library(
+    'crypto',
+    dirs: join_paths(meson.source_root(), 'lib/openssl/openssl_share_3.0.0/lib'),
+    required: get_option('cpp-httplib_openssl'),
+  )
+endif
+
 if openssl_dep.found()
   deps += openssl_dep
   deps += crypto_dep
   args += '-DCPPHTTPLIB_OPENSSL_SUPPORT'
   if host_machine.system() == 'darwin'
-    macosx_keychain_dep = dependency('appleframeworks', modules: ['CoreFoundation', 'Security'], required: get_option('cpp-httplib_macosx_keychain'))
+    macosx_keychain_dep = dependency(
+      'appleframeworks',
+      modules: ['CoreFoundation', 'Security'],
+      required: get_option('cpp-httplib_macosx_keychain'),
+    )
     if macosx_keychain_dep.found()
-        deps += macosx_keychain_dep
-        args += '-DCPPHTTPLIB_USE_CERTS_FROM_MACOSX_KEYCHAIN'
-    endif  
+      deps += macosx_keychain_dep
+      args += '-DCPPHTTPLIB_USE_CERTS_FROM_MACOSX_KEYCHAIN'
+    endif
   endif
 endif
 
@@ -53,8 +75,8 @@ if zlib_dep.found()
 endif
 
 brotli_deps = [dependency('libbrotlicommon', required: get_option('cpp-httplib_brotli'))]
-brotli_deps += dependency('libbrotlidec',    required: get_option('cpp-httplib_brotli'))
-brotli_deps += dependency('libbrotlienc',    required: get_option('cpp-httplib_brotli'))
+brotli_deps += dependency('libbrotlidec', required: get_option('cpp-httplib_brotli'))
+brotli_deps += dependency('libbrotlienc', required: get_option('cpp-httplib_brotli'))
 
 brotli_found_all = true
 foreach brotli_dep : brotli_deps
@@ -79,7 +101,7 @@ if get_option('cpp-httplib_compile')
     output: ['httplib.cc', 'httplib.h'],
     command: [python3, files('split.py'), '--out', meson.current_build_dir()],
     install: true,
-    install_dir: [false, get_option('includedir')]
+    install_dir: [false, get_option('includedir')],
   )
   lib = library(
     'cpp-httplib',
@@ -88,27 +110,36 @@ if get_option('cpp-httplib_compile')
     cpp_args: args,
     version: version,
     soversion: version.split('.')[0] + '.' + version.split('.')[1],
-    install: true
+    install: true,
   )
-  cpp_httplib_dep = declare_dependency(compile_args: args, dependencies: deps, link_with: lib, sources: httplib_ch[1])
+  cpp_httplib_dep = declare_dependency(
+    compile_args: args,
+    dependencies: deps,
+    link_with: lib,
+    sources: httplib_ch[1],
+  )
 
   import('pkgconfig').generate(
     lib,
     description: 'A C++ HTTP/HTTPS server and client library',
     extra_cflags: args,
     url: 'https://github.com/yhirose/cpp-httplib',
-    version: version
+    version: version,
   )
 else
-#   install_headers('httplib.h')
-  cpp_httplib_dep = declare_dependency(compile_args: args, dependencies: deps, include_directories: include_directories('.'))
-#   import('pkgconfig').generate(
-#     name: 'cpp-httplib',
-#     description: 'A C++ HTTP/HTTPS server and client library',
-#     install_dir: join_paths(get_option('datadir'), 'pkgconfig'),
-#     url: 'https://github.com/yhirose/cpp-httplib',
-#     version: version
-#   )
+  #   install_headers('httplib.h')
+  cpp_httplib_dep = declare_dependency(
+    compile_args: args,
+    dependencies: deps,
+    include_directories: include_directories('.'),
+  )
+  #   import('pkgconfig').generate(
+  #     name: 'cpp-httplib',
+  #     description: 'A C++ HTTP/HTTPS server and client library',
+  #     install_dir: join_paths(get_option('datadir'), 'pkgconfig'),
+  #     url: 'https://github.com/yhirose/cpp-httplib',
+  #     version: version
+  #   )
 endif
 
 if meson.version().version_compare('>=0.54.0')
@@ -122,31 +153,28 @@ endif
 ###############################################################
 
 # 拷贝配置文件到build目录
-config_files = [
-    'dragon.crt',
-    'dragon.key',
-    'dragon.ini'
-]
+config_files = ['dragon.crt', 'dragon.key', 'dragon.ini']
 
 foreach file : config_files
-    configure_file(input : './src/config/'+file,
-    output : file,
-    copy: true)
+  configure_file(input: './src/config/' + file, output: file, copy: true)
 endforeach
 
 sources = [
-    'src/App.cpp',
-    'src/DragonServer.cpp',
-    'src/EasyLogger.cpp',
-    'src/Request.cpp',
-    'src/FileUtils.cpp',
-    'src/ConsoleTable.cpp',
-    'src/Base64.cpp',
-    'src/Global.cpp']
+  'src/App.cpp',
+  'src/DragonServer.cpp',
+  'src/EasyLogger.cpp',
+  'src/Request.cpp',
+  'src/FileUtils.cpp',
+  'src/ConsoleTable.cpp',
+  'src/Base64.cpp',
+  'src/Global.cpp',
+]
 
-executable('dragon', 
-            sources,
-            # cpp_args:cpp_args,
-            link_args : ['-ldl'],
-            dependencies:cpp_httplib_dep,
-            include_directories:includes)
+executable(
+  'dragon',
+  sources,
+  # cpp_args:cpp_args,
+  link_args: ['-ldl'],
+  dependencies: cpp_httplib_dep,
+  include_directories: includes,
+)
