--- a/src/config/dragon.ini
+++ b/src/config/dragon.ini
@@ -6,6 +6,7 @@ Headers=Origin, Content-Type, X-Auth-Token, X-XSRF-TOKEN
 [Authentication]
 username=root
 password=0penBmc
+eanbled=false
 
 ; 服务器监听信息
 [Server]
